Task 1 fixed from collect() to toList()